--- a/style.css
+++ b/style.css
@@ -2,35 +2,47 @@ body{
     margin: 0px;
     text-align: center;
 }
+
 header{
     margin: 45px 0 ; 
 }
+
 h1{
     font-size: 48px;
     color: #2e7ad3;
 }
+
 h2{
     color: #104c90;
     font-size: 32px;
-    margin:10px 0;
+    margin: 0 0 10px 0;
 }
+
 a{
     color: #ff8000;
 }
+
+a:hover, 
+a:focus{
+    color: #f54748;
+}
+
 p{
     font-size: 16px;
     margin-bottom: 9px;
 }
+
 .main-content{
-    width: 500px;
+    width: 450px;
     text-align: left;
     background:#f1f1f1;
     border: none;
     margin:0 auto;
-    padding: 10px; 
+    padding: 25px; 
     align-items: center;    
 }
+
 .description{
-    margin: 25px 0;
+    margin: 25px 0 0 0;
     
 }
